fix #84 Low contrast in "resulting build.sbt"

--- a/client/src/main/assets/public/_libraries.less
+++ b/client/src/main/assets/public/_libraries.less
@@ -93,8 +93,8 @@
     }
   }
 
-  .result-sbt {
-    opacity: 0.5;
+  .result-sbt * {
+    cursor: pointer;
   }
 
   .scaladex {
